Archive2/f9/4f81ec7fa732cf/output
main.cpp:4:9: error: expected unqualified-id before 'template'
 typedef template <class T> A<T, int> MyPartialSpecializa<T>; 
         ^
